// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilePreviewGrid/> custom column headers 1`] = `
Array [
  <strong>
    File preview:
  </strong>,
  <p
    className="margin-top"
  >
    <span>
      The 
      first 3 rows 
       of your data file
       
      are
       shown below.
    </span>
     
  </p>,
  <div
    className="table-responsive"
  >
    <div
      className="grid-messages"
    />
    <table
      className="table table-striped table-bordered"
    >
      <thead>
        <tr>
          <th
            className="grid-header-cell"
            onClick={[Function]}
            style={
              Object {
                "minWidth": undefined,
              }
            }
          >
            First Column
          </th>
          <th
            className="grid-header-cell"
            onClick={[Function]}
            style={
              Object {
                "minWidth": undefined,
              }
            }
          >
            Second Column
          </th>
          <th
            className="grid-header-cell"
            onClick={[Function]}
            style={
              Object {
                "minWidth": undefined,
              }
            }
          >
            Third Column
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className=""
        >
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            abc
          </td>
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            123
          </td>
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            2019-01-01
          </td>
        </tr>
        <tr
          className=""
        >
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            def
          </td>
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            456
          </td>
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            2019-01-02
          </td>
        </tr>
        <tr
          className=""
        >
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            ghi
          </td>
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            789
          </td>
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            2019-01-03
          </td>
        </tr>
      </tbody>
    </table>
  </div>,
]
`;

exports[`<FilePreviewGrid/> custom header and info message 1`] = `
Array [
  <strong>
    Custom Header
  </strong>,
  <p
    className="margin-top"
  >
    <span>
      The 
      first 3 rows 
       of your data file
       
      are
       shown below.
    </span>
     
    Custom info message.
  </p>,
  <div
    className="table-responsive"
  >
    <div
      className="grid-messages"
    />
    <table
      className="table table-striped table-bordered"
    >
      <thead>
        <tr>
          <th
            className="grid-header-cell"
            onClick={[Function]}
            style={
              Object {
                "minWidth": undefined,
              }
            }
          >
            col1
          </th>
          <th
            className="grid-header-cell"
            onClick={[Function]}
            style={
              Object {
                "minWidth": undefined,
              }
            }
          >
            col2
          </th>
          <th
            className="grid-header-cell"
            onClick={[Function]}
            style={
              Object {
                "minWidth": undefined,
              }
            }
          >
            col3
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className=""
        >
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            abc
          </td>
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            123
          </td>
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            2019-01-01
          </td>
        </tr>
        <tr
          className=""
        >
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            def
          </td>
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            456
          </td>
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            2019-01-02
          </td>
        </tr>
        <tr
          className=""
        >
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            ghi
          </td>
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            789
          </td>
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            2019-01-03
          </td>
        </tr>
      </tbody>
    </table>
  </div>,
]
`;

exports[`<FilePreviewGrid/> error message 1`] = `
<div
  className="alert alert-warning"
  role="alert"
>
  Testing error message
</div>
`;

exports[`<FilePreviewGrid/> error message with custom style 1`] = `
<div
  className="alert alert-danger"
  role="alert"
>
  Testing error message
</div>
`;

exports[`<FilePreviewGrid/> no data 1`] = `
Array [
  <strong>
    File preview:
  </strong>,
  <p
    className="margin-top"
  >
    <span>
      The 
      first 0 rows 
       of your data file
       
      are
       shown below.
    </span>
     
  </p>,
  <div
    className="table-responsive"
  >
    <div
      className="grid-messages"
    />
    <table
      className="table table-striped table-bordered"
    >
      <thead>
        <tr />
      </thead>
      <tbody>
        <tr
          className="grid-empty"
        >
          <td
            colSpan={0}
          >
            No data available.
          </td>
        </tr>
      </tbody>
    </table>
  </div>,
]
`;

exports[`<FilePreviewGrid/> one row of data 1`] = `
Array [
  <strong>
    File preview:
  </strong>,
  <p
    className="margin-top"
  >
    <span>
      The 
      one row 
       of your data file
       
      is
       shown below.
    </span>
     
  </p>,
  <div
    className="table-responsive"
  >
    <div
      className="grid-messages"
    />
    <table
      className="table table-striped table-bordered"
    >
      <thead>
        <tr>
          <th
            className="grid-header-cell"
            onClick={[Function]}
            style={
              Object {
                "minWidth": undefined,
              }
            }
          >
            test
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className=""
        >
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            123
          </td>
        </tr>
      </tbody>
    </table>
  </div>,
]
`;

exports[`<FilePreviewGrid/> three rows of data 1`] = `
Array [
  <strong>
    File preview:
  </strong>,
  <p
    className="margin-top"
  >
    <span>
      The 
      first 3 rows 
       of your data file
       
      are
       shown below.
    </span>
     
  </p>,
  <div
    className="table-responsive"
  >
    <div
      className="grid-messages"
    />
    <table
      className="table table-striped table-bordered"
    >
      <thead>
        <tr>
          <th
            className="grid-header-cell"
            onClick={[Function]}
            style={
              Object {
                "minWidth": undefined,
              }
            }
          >
            col1
          </th>
          <th
            className="grid-header-cell"
            onClick={[Function]}
            style={
              Object {
                "minWidth": undefined,
              }
            }
          >
            col2
          </th>
          <th
            className="grid-header-cell"
            onClick={[Function]}
            style={
              Object {
                "minWidth": undefined,
              }
            }
          >
            col3
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className=""
        >
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            abc
          </td>
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            123
          </td>
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            2019-01-01
          </td>
        </tr>
        <tr
          className=""
        >
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            def
          </td>
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            456
          </td>
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            2019-01-02
          </td>
        </tr>
        <tr
          className=""
        >
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            ghi
          </td>
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            789
          </td>
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            2019-01-03
          </td>
        </tr>
      </tbody>
    </table>
  </div>,
]
`;

exports[`<FilePreviewGrid/> warning message 1`] = `
Array [
  <strong>
    File preview:
  </strong>,
  <div
    className="alert alert-warning"
    role="alert"
  >
    Testing warning message
  </div>,
  <p
    className="margin-top"
  >
    <span>
      The 
      first 3 rows 
       of your data file
       
      are
       shown below.
    </span>
     
  </p>,
  <div
    className="table-responsive"
  >
    <div
      className="grid-messages"
    />
    <table
      className="table table-striped table-bordered"
    >
      <thead>
        <tr>
          <th
            className="grid-header-cell"
            onClick={[Function]}
            style={
              Object {
                "minWidth": undefined,
              }
            }
          >
            col1
          </th>
          <th
            className="grid-header-cell"
            onClick={[Function]}
            style={
              Object {
                "minWidth": undefined,
              }
            }
          >
            col2
          </th>
          <th
            className="grid-header-cell"
            onClick={[Function]}
            style={
              Object {
                "minWidth": undefined,
              }
            }
          >
            col3
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className=""
        >
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            abc
          </td>
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            123
          </td>
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            2019-01-01
          </td>
        </tr>
        <tr
          className=""
        >
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            def
          </td>
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            456
          </td>
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            2019-01-02
          </td>
        </tr>
        <tr
          className=""
        >
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            ghi
          </td>
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            789
          </td>
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            2019-01-03
          </td>
        </tr>
      </tbody>
    </table>
  </div>,
]
`;
